<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">HomeControl</string>
    <string name="service_name">HANService</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_http">HttpActivity</string>
    <string name="title_activity_download_jsontask">DownloadJSONTask</string>
    <string name="myURL">http://192.168.2.109/requestData.php</string>
    <string name="requestData_ext">/homeauto/requestData.php</string>
    <string name="updateModule_ext">/homeauto/updateModule.php</string>
    <string name="requestUninit_ext">/homeauto/requestUninit.php</string>
    <string name="newModule_ext">/homeauto/newModule.php</string>
    <string name="removeModule_ext">/homeauto/removeModule.php</string>
    <string name="no_network">No Network Connection</string>
    <string name="invalid_url">Invalid URL</string>
    <string name="error">Error</string>
    <string name="err_close_is">Error closing inputStream</string>
    <string name="please_wait">Please Wait...</string>
    <string name="wait_adding_module">Adding New Module...</string>
    <string name="new_user_message">You can get started with your Home Automation Network with a few pieces of information.</string>
    <string name="confirm_acct_delete_1">Deleting the account for Network </string>
    <string name="confirm_acct_delete_2">"will erase all account preferences. Are you sure you want to proceed?</string>
    <string name="new_user_title">New Network Setup</string>
    <string name="network_name_textview">Network Name</string>
    <string name="network_ip_textview">Network IP Address</string>
    <string name="passcode_textview">Passcode</string>
    <string name="confirm_passcode_textview">Confirm Passcode</string>
    <string name="change_passcode_textview">Change Passcode</string>
    <string name="new_passcode_textview">New Passcode</string>
    <string name="ok">OK</string>
    <string name="save_changes">Save Changes</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="passcode_hint">(recomended)</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login_prompt">Please login to your Home Network</string>
    <string name="retry_message">Connection to Server Failed</string>
    <string name="settings_fragment_message">You can modify your account details and make changes to your preferences.</string>
    <string name="settings_delete_prompt">Delete a Network Account</string>
    <string name="view_accounts_button">View Accounts</string>
    <string name="settings_add_prompt">Create a New Network Account</string>
    <string name="settings_restore_app">Restore App To Default</string>
    <string name="settings_restore_app_button">Restore App</string>
    <string name="restore_app_confirm_msg">Restoring the App will remove all Networks and Settings.\nAre you sure you want to continue?</string>
    <string name="add_network">Add Network</string>
    <string name="title_activity_home_control_wear">HomeControlWear</string>
    <string name="hello_round">Hello Round World!</string>
    <string name="hello_square">Hello Square World!</string>
    <string name="title_activity_wear">WearActivity</string>

</resources>
