<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        style="@style/textHeading"
        android:paddingTop="30dp"
        android:paddingLeft="40dp"
        android:paddingBottom="10dp"
        android:text="Edit Account Settings"/>
    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/textStandard"
                android:padding="10dp"
                android:text="@string/settings_fragment_message"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/textStandard"
                    android:padding="10dp"
                    android:text="@string/network_name_textview"/>
                <EditText
                    android:id="@+id/settings_network_name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:inputType="textCapSentences|textNoSuggestions"
                    android:imeOptions="actionNext"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/textStandard"
                    android:padding="10dp"
                    android:text="@string/network_ip_textview"/>
                <EditText
                    android:id="@+id/settings_ip_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:inputType="textUri"
                    android:imeOptions="actionNext"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/settings_dropdown_text"
                    style="@style/textStandard"
                    android:layout_width="wrap_content"
                    android:padding="10dp"
                    android:text="@string/change_passcode_textview"/>
                <Button
                    android:id="@+id/dropdown"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:paddingLeft="25dp"
                    android:paddingRight="25dp"
                    android:background="@android:color/transparent"/>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/passcode_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/settings_passcode_text"
                        style="@style/textStandard"
                        android:layout_width="100dp"
                        android:layout_weight="2"
                        android:padding="10dp"
                        android:text="@string/new_passcode_textview"/>
                    <EditText
                        android:id="@+id/settings_passcode"
                        android:layout_width="50dp"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:layout_gravity="right"
                        android:inputType="numberPassword"
                        android:imeOptions="actionNext"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/settings_confirm_passcode_text"
                        style="@style/textStandard"
                        android:layout_width="100dp"
                        android:layout_weight="2"
                        android:padding="10dp"
                        android:text="@string/confirm_passcode_textview"/>
                    <EditText
                        android:id="@+id/settings_confirm_passcode"
                        android:layout_width="50dp"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:layout_gravity="right"
                        android:inputType="numberPassword"
                        android:imeOptions="actionDone"/>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/settings_ok_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingLeft="25dp"
                    android:paddingRight="25dp"
                    android:textSize="20sp"
                    android:text="@string/save_changes"/>

            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="@android:color/darker_gray"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    style="@style/textStandard"
                    android:layout_weight="2"
                    android:padding="10dp"
                    android:text="@string/settings_add_prompt"/>

                <Button
                    android:id="@+id/settings_add_account_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingLeft="25dp"
                    android:paddingRight="25dp"
                    android:textSize="20sp"
                    android:text="@string/add_network"/>
                </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="@android:color/darker_gray"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    style="@style/textStandard"
                    android:layout_weight="2"
                    android:padding="10dp"
                    android:text="@string/settings_delete_prompt"/>

                <Button
                    android:id="@+id/settings_delete_account_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingLeft="25dp"
                    android:paddingRight="25dp"
                    android:textSize="20sp"
                    android:text="@string/view_accounts_button"/>
            </LinearLayout>
            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="@android:color/darker_gray"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    style="@style/textStandard"
                    android:layout_weight="2"
                    android:padding="10dp"
                    android:text="@string/settings_restore_app"/>

                <Button
                    android:id="@+id/settings_restore_app_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingLeft="25dp"
                    android:paddingRight="25dp"
                    android:textSize="20sp"
                    android:text="@string/settings_restore_app_button"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
